Remove numbered equations

--- a/solutions/linear/15.tex
+++ b/solutions/linear/15.tex
@@ -3,67 +3,67 @@
 Прямая на плоскости может быть задана:
 \begin{enumerate}
     \item Векторным уравнением в параметрической форме:
-    \begin{equation}
+    \begin{equation*}
         \mathbf{r} = \mathbf{r}_0 + \mathbf{a} t \quad (\mathbf{a} \neq \mathbf{0})
-    \end{equation}
+    \end{equation*}
     где $\mathbf{a}$ -- направляющий вектор, $\mathbf{r}_0$ -- радиус-вектор фиксированной точки на прямой.
     
     \item Нормальным векторным уравнением
-    \begin{equation}
+    \begin{equation*}
         ( \mathbf{r} - r_0, \mathbf{n}) = 0 \quad (\mathbf{n} \neq \mathbf{0})
-    \end{equation}
+    \end{equation*}
     где $n$ -- нормальный вектор прямой.
 
     \item Общим уравнением в декартовой системе координат
-    \begin{equation}
+    \begin{equation*}
         Ax + By + C = 0 \quad (A^2 + B^2 \neq 0)
-    \end{equation}
+    \end{equation*}
 \end{enumerate}
 
-Уравнение $2$ можно записать в общей декартовой системе координат в виде $(\mathbf{r}, \mathbf{n}) = D$.
+Второе уравнение можно записать в общей декартовой системе координат в виде $(\mathbf{r}, \mathbf{n}) = D$.
 
-Если уравнение $1$ записать в общей декартовой системе координат, то можно получить параметрическое уравнение прямой на плоскости.
-\begin{equation}
+Если первое уравнение записать в общей декартовой системе координат, то можно получить параметрическое уравнение прямой на плоскости.
+\begin{equation*}
     x = x_0 + \alpha t, \quad y = y_0 + \beta t
-\end{equation}
+\end{equation*}
 Или в канонической форме:
-\begin{equation}
+\begin{equation*}
     \frac{x + x_0}{\alpha} = \frac{y - y_0}{\beta}
-\end{equation}
+\end{equation*}
 
 Уравнение прямой, проходящей через 2 различные точки может быть записано в векторной форме
-\begin{equation}
+\begin{equation*}
     \mathbf{r} = \mathbf{r}_1 + (\mathbf{r_2} - \mathbf{r}_1)t
-\end{equation}
+\end{equation*}
 И в координатной форме:
-\begin{equation}
+\begin{equation*}
     \frac{x - x_1}{x_2 - x_1} = \frac{y - y_1}{y_2 - y_1}
-\end{equation}
+\end{equation*}
 
 Расстояние от точки с радиус-вектором $\mathbf{r}_1$ до прямой, заданной векторным уравнением $2$, равно
-\begin{equation}
+\begin{equation*}
     |Ax_1+By_1+C|/\sqrt{A^2+B^2}
-\end{equation}
+\end{equation*}
 
 Плоскость может быть задана
 \begin{enumerate}
     \item векторным параметрическим уравнением 
-    \begin{equation}
+    \begin{equation*}
         \mathbf{r} = \mathbf{r}_0+\mathbf{a}u + \mathbf{b}v
-    \end{equation}
+    \end{equation*}
     где $\mathbf{a, b}$ -- направляющие векторы плоскости, $\mathbf{r}_0$ -- радиус вектор фиксированной точки плоскости.
     \item Нормальным векторным уравнением
-    \begin{equation}
+    \begin{equation*}
         (\mathbf{r} - \mathbf{r}_0, \mathbf{n}) = 0 \quad (\mathbf{n} \neq 0)
-    \end{equation}
+    \end{equation*}
     где $\mathbf{n}$ -- нормальный вектор плоскости.
     \item Общим уравнением в декартовой системе координат
-    \begin{equation}
+    \begin{equation*}
         Ax+By+Cz+D=0 \quad (A^2+B^2+C^2 \neq 0)
-    \end{equation}
+    \end{equation*}
 \end{enumerate}
 
-При этом уравнение $(10)$ можно записать в виде $(\mathbf{r}, \mathbf{n})=D$, а уравнение $(9)$ в виде $(\mathbf{r} - \mathbf{r}_0, \mathbf{a}, \mathbf{b}) = 0$. Последнее уравнение в координатной форме равносильно уравнению
+При этом уравнение $2$ можно записать в виде $(\mathbf{r}, \mathbf{n})=D$, а уравнение $1$ в виде $(\mathbf{r} - \mathbf{r}_0, \mathbf{a}, \mathbf{b}) = 0$. Последнее уравнение в координатной форме равносильно уравнению
 
 \begin{equation*}
     \begin{vmatrix}
@@ -75,9 +75,9 @@
 \end{equation*}
 
 Уравнение плоскости через три точки можно записать как
-\begin{equation}
+\begin{equation*}
     (\mathbf{r} - \mathbf{r}_0, \mathbf{r}_1 - \mathbf{r}_0, \mathbf{r}_2 - \mathbf{r}_0) = 0
-\end{equation}
+\end{equation*}
 И в координатной форме
 \begin{equation*}
         \begin{vmatrix}
@@ -89,12 +89,12 @@
 \end{equation*}
 Здесь $x_i, y_i, z_i$ - декартовы координаты точек, а $\mathbf{r}_i$ - соответствующие радиус-векторы.
 
-Расстояние от точки с радиус-вектором $\mathbf{r}_1$ до плоскости, заданной уравнением $(10)$ равно
+Расстояние от точки с радиус-вектором $\mathbf{r}_1$ до плоскости, заданной уравнением $2$ равно
 \begin{equation*}
     \frac{(\mathbf{r}_1-\mathbf{r}_0, \mathbf{n})}{|\mathbf{n}|}
 \end{equation*}
 
-Расстояние от точки $M(x_1, y_1, z_1)$ до плоскости, заданной в прямоугольной системе координат уравнением $(11)$ равно
+Расстояние от точки $M(x_1, y_1, z_1)$ до плоскости, заданной в прямоугольной системе координат уравнением $3$ равно
 \begin{equation*}
     \frac{Ax_1+By_1+Cz_1}{\sqrt{A^2+B^2+C^2}}
 \end{equation*}
@@ -102,9 +102,9 @@
 Прямая в пространстве может быть задана:
 \begin{enumerate}
     \item Векторным уравнением в параметрической форме:
-    \begin{equation}
+    \begin{equation*}
         \mathbf{r} = \mathbf{r}_0 + \mathbf{a} t \quad (\mathbf{a} \neq \mathbf{0})
-    \end{equation}
+    \end{equation*}
     где $\mathbf{a}$ -- направляющий вектор, $\mathbf{r}_0$ -- радиус-вектор фиксированной точки на прямой.
     
     \item Векторным уравнением:
@@ -117,7 +117,7 @@
     \end{equation*}
 \end{enumerate}
 
-Если уравнение $(13)$ записать в общей декартовой системе координат, то получим параметрические уравнения прямой линии:
+Если уравнение $1$ записать в общей декартовой системе координат, то получим параметрические уравнения прямой линии:
 \begin{equation*}
     x=x_0+\alpha t, \quad y=y_0+\beta t, \quad z = z_0 + \gamma t
 \end{equation*}
