--- a/problems/analysis.tex
+++ b/problems/analysis.tex
@@ -15,65 +15,65 @@
 
 Сначала разложим $\tg x$:
 \[
-\tg x = x + \frac{x^3}{3} + \frac{2x^5}{15} + O(x^7).
+\tg x = x + \frac{x^3}{3} + \frac{2x^5}{15} + o(x^5).
 \]
 
 Тогда:
 \[
-\tg^2 x = \left(x + \frac{x^3}{3} + O(x^5)\right)^2 = x^2 + \frac{2x^4}{3} + O(x^6).
+\tg^2 x = \left(x + \frac{x^3}{3} + o(x^4)\right)^2 = x^2 + \frac{2x^4}{3} + o(x^4).
 \]
 
-Используем разложение $\sin u = u - \frac{u^3}{6} + O(u^5)$ при $u = \tg^2 x$:
+Используем разложение $\sin u = u - \frac{u^3}{6} + o(u^3)$ при $u = \tg^2 x$:
 \[
-\sin(\tg^2 x) = \tg^2 x - \frac{(\tg^2 x)^3}{6} + O(x^{12}) = x^2 + \frac{2x^4}{3} + O(x^6).
+\sin(\tg^2 x) = \tg^2 x - \frac{(\tg^2 x)^3}{6} + o(x^{10}) = x^2 + \frac{2x^4}{3} + o(x^5).
 \]
 
-Теперь разложим $\ln(1 + x^2 + x^3)$. Используем $\ln(1+u) = u - \frac{u^2}{2} + \frac{u^3}{3} + O(u^4)$ при $u = x^2 + x^3$:
+Теперь разложим $\ln(1 + x^2 + x^3)$. Используем $\ln(1+u) = u - \frac{u^2}{2} + \frac{u^3}{3} + o(u^3)$ при $u = x^2 + x^3$:
 \[
-\ln(1 + x^2 + x^3) = (x^2 + x^3) - \frac{(x^2 + x^3)^2}{2} + O(x^6).
+\ln(1 + x^2 + x^3) = (x^2 + x^3) - \frac{(x^2 + x^3)^2}{2} + o(x^5).
 \]
 
 Вычислим $(x^2 + x^3)^2 = x^4 + 2x^5 + x^6$:
 \[
-\ln(1 + x^2 + x^3) = x^2 + x^3 - \frac{x^4}{2} - x^5 + O(x^6).
+\ln(1 + x^2 + x^3) = x^2 + x^3 - \frac{x^4}{2} - x^5 + o(x^5).
 \]
 
 Числитель:
 \[
-\sin(\tg^2 x) - \ln(1 + x^2 + x^3) = \left(x^2 + \frac{2x^4}{3} + O(x^6)\right) - \left(x^2 + x^3 - \frac{x^4}{2} + O(x^5)\right).
+\sin(\tg^2 x) - \ln(1 + x^2 + x^3) = \left(x^2 + \frac{2x^4}{3} + o(x^5)\right) - \left(x^2 + x^3 - \frac{x^4}{2} + o(x^5)\right).
 \]
 \[
-= -x^3 + \frac{2x^4}{3} + \frac{x^4}{2} + O(x^5) = -x^3 + \frac{7x^4}{6} + O(x^5).
+= -x^3 + \frac{2x^4}{3} + \frac{x^4}{2} + o(x^4) = -x^3 + \frac{7x^4}{6} + o(x^4).
 \]
 
 \textbf{Шаг 2. Разложение знаменателя.}
 
 Разложим $\ch x$:
 \[
-\ch x = 1 + \frac{x^2}{2} + \frac{x^4}{24} + O(x^6).
+\ch x = 1 + \frac{x^2}{2} + \frac{x^4}{24} + o(x^5).
 \]
 
-Тогда $\ch x - 1 = \frac{x^2}{2} + \frac{x^4}{24} + O(x^6)$.
+Тогда $\ch x - 1 = \frac{x^2}{2} + \frac{x^4}{24} + o(x^5)$.
 
-Используем $\arctg u = u - \frac{u^3}{3} + O(u^5)$ при $u = \ch x - 1$:
+Используем $\arctg u = u - \frac{u^3}{3} + o(u^4)$ при $u = \ch x - 1$:
 \[
-\arctg(\ch x - 1) = \left(\frac{x^2}{2} + \frac{x^4}{24}\right) - \frac{1}{3}\left(\frac{x^2}{2}\right)^3 + O(x^6) = \frac{x^2}{2} + \frac{x^4}{24} + O(x^6).
+\arctg(\ch x - 1) = \left(\frac{x^2}{2} + \frac{x^4}{24}\right) - \frac{1}{3}\left(\frac{x^2}{2}\right)^3 + o(x^4) = \frac{x^2}{2} + \frac{x^4}{24} + o(x^4).
 \]
 
 Делим на $x$:
 \[
-\frac{\arctg(\ch x - 1)}{x} = \frac{x}{2} + \frac{x^3}{24} + O(x^5).
+\frac{\arctg(\ch x - 1)}{x} = \frac{x}{2} + \frac{x^3}{24} + o(x^4).
 \]
 
 Знаменатель:
 \[
-\frac{\arctg(\ch x - 1)}{x} - \frac{x}{2} = \frac{x}{2} + \frac{x^3}{24} + O(x^5) - \frac{x}{2} = \frac{x^3}{24} + O(x^5).
+\frac{\arctg(\ch x - 1)}{x} - \frac{x}{2} = \frac{x}{2} + \frac{x^3}{24} + o(x^4) - \frac{x}{2} = \frac{x^3}{24} + o(x^4).
 \]
 
 \textbf{Шаг 3. Вычисление предела.}
 
 \[
-\lim_{x \to 0} \frac{-x^3 + \frac{7x^4}{6} + O(x^5)}{\frac{x^3}{24} + O(x^5)} = \lim_{x \to 0} \frac{x^3\left(-1 + \frac{7x}{6} + O(x^2)\right)}{x^3\left(\frac{1}{24} + O(x^2)\right)} = \frac{-1}{\frac{1}{24}} = -24.
+\lim_{x \to 0} \frac{-x^3 + \frac{7x^4}{6} + o(x^4)}{\frac{x^3}{24} + o(x^4)} = \lim_{x \to 0} \frac{x^3\left(-1 + \frac{7x}{6} + o(x)\right)}{x^3\left(\frac{1}{24} + o(x)\right)} = \frac{-1}{\frac{1}{24}} = -24.
 \]
 
 \textbf{Ответ:} $-24$.
