--- a/solutions/logic/32.tex
+++ b/solutions/logic/32.tex
@@ -1,1 +1,104 @@
-\subsection{Понятие формальной системы. Исчисление высказываний.}
+\subsection{Полная система. Классы Поста. Критерий Поста}
+
+\Def Булевыми функциями $k$ аргументов или множеством $P_2^k$ будем называть функции вида $f: \{0, 1\}^k \to \{0, 1\}$. $P_2 := \bigcup\limits_{k=0}^{+ \infty} P_2^k$.
+
+\Def Литерал --- переменная или ее отрицание.
+
+Булева функция может задаваться:
+
+\begin{enumerate}
+    \item Таблицей истинности.
+    \item Вектором значений (длины $2^k$) на каждом наборе аргументов.
+    \item Формулой.
+\end{enumerate}
+
+\Def Формула --- это
+
+\begin{enumerate}
+    \item Литерал, константа (0 или 1).
+    \item Если $f$ --- формула, то и $\overline{f}$ --- тоже (отрицание).
+    \item Если $f, g$ --- формулы, то $f \circ g$ --- тоже, где $\circ$ --- функция двух переменных.
+\end{enumerate}
+
+\Def Суперпозицией (композицией) называется сложная функция, полученная из исходных подстановкой одной функции в другую и отождествлением переменных.
+
+\Def Замыканием системы функций называют все такие функции, которые можно получить из нее с помощью композиции.
+
+\Def Систему функций называют замкнутой, если она совпадает со своим замыканием.
+
+\Def Систему функций называют полной, если ее замыкание --- $P_2$.
+
+\textbf{Классы Поста}
+
+\Def Пусть $\alpha, \beta \in \{0, 1\}^k$. Введем отношение нестрогого частичного порядка: $\alpha \preccurlyeq \beta \iff \alpha_i \le \beta_i \quad \forall i$.
+
+\begin{enumerate}
+    \item $T_0 := \{ f \mid f(0, 0, \dots 0) = 0 \}$.
+    \item $T_1 := \{ f \mid f(1, 1, \dots 1) = 1 \}$.
+    \item $L := \{ f \mid f = a_0 + a_1x_1 + \dots a_nx_n \}$. Где ``$+$'' --- \texttt{xor} ($\oplus$). ``$\cdot$'' --- конъюнкция ($\land$).
+    \item $S := \{ f \mid \overline{f}(\overline{x_1}, \dots \overline{x_n}) = f(x_1, x_2, \dots x_n) \}$.
+    \item $M := \{ f \mid \alpha \preccurlyeq \beta \implies f(\alpha) \le f(\beta) \}$.
+\end{enumerate}
+
+\Statement Классы Поста замкнуты.
+
+\Th Критерий Поста.
+
+Система функций полна $\iff$ она не содержится полностью ни в одном классе Поста.
+
+$\square$
+\begin{itemize}
+    \item Если система функций полностью содержится в одном из классов Поста, то ее замыкание полностью лежит в нем, при этом ни один из классов не совпадает с $P_2$.
+    \item Пусть система функций не содержится полностью ни в одном из классов Поста. Докажем, что она полна.
+
+    Рассмотрим функции:
+
+    \begin{enumerate}
+        \item $f_0 \notin T_0$
+        \item $f_1 \notin T_1$
+        \item $f_M \notin M$
+        \item $f_L \notin L$
+        \item $f_S \notin S$
+    \end{enumerate}
+
+    Соберем $\varphi_0(x) := f_0(x, x, \dots x)$. Тогда $\varphi_0(0) = 1$. Значит получили $\neg$ или $1$. Аналогично из $\varphi_1(x) := f_1(x, x, \dots x)$ получаем $\neg$ или $0$.
+
+    Рассмотрим 3 случая:
+
+    \begin{enumerate}
+        \item Получили $0, 1, \neg$ --- переходим к следующему шагу.
+        \item Получили только $0, 1$.
+
+        Возьмем $f_M$ и $\alpha, \beta : \alpha \preccurlyeq \beta, f_M(\alpha) = 1, f_M(\beta) = 0$, которые найдутся по определению.
+
+        Пусть $\gamma(x) : \gamma_i(x) = \alpha_i,$ если $\alpha_i = \beta_i$ и $x$ иначе.
+
+       \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.25\linewidth]{32_1.png}
+            \caption{Пример $\gamma$}
+            \label{fig:placeholder}
+        \end{figure}
+
+        Положим $\varphi_M(x) := f_M(\gamma(x))$. Тогда $\varphi_M(0) = 1, \varphi_M(1) = 0$. Получили и $\neg$.
+
+        \item Получили только $\neg$.
+
+        Возьмем $f_S$ и $\alpha_1, \alpha_2 \dots \alpha_n : f_S(\alpha_1, \alpha_2 \dots \alpha_n) = f_S(\overline{ \alpha_1 }, \overline{\alpha_2} \dots \overline{\alpha_n})$
+
+        Поставим на места 1 --- $x$, а на места 0 --- $\overline{x}$. Соберем $\varphi_S(x)$ вида $f_S(x, \overline{x}, x, \dots)$. Тогда $\varphi_S(x) = \varphi_S(\overline{x})$. Значит $\varphi_S \equiv \text{const}$. С помощью отрицания получим и вторую константу.
+
+        Теперь есть $0, 1, \neg$.
+
+        Рассмотрим полином Жегалкина для $f_L$ и наименьшую степень в нем, большую 1 (с ненулевым коэффициентом).
+
+        $f_L(x) = a_0 + \dots a_i x_{i1} x_{i2} \dots x_{ik} \dots$. Отождествим $x_{i1} = y, x_{i2} = z$, $x_{i2..k} = 1$. Остальные $x_{jk} = 0$.
+
+        Тогда получим $\varphi_L(y, z)$, равную полиному от $y, z$.
+
+        То есть вида $1^{\sigma_1} + y^{\sigma_2}z^{\sigma_3}$. Уберем отрицания над переменными и получим $1 + yz$ или $yz$. В первом случае заменим $y$ на $1$, а в $1 + z$ подставим исходное выражение: $1 + (1 + yz) = yz$.
+
+        Система $0, 1, \neg, \cdot$ полна (можно составить КНФ или ДНФ, получив \texttt{or} из законов де Моргана + есть константы).
+    \end{enumerate}
+\end{itemize}
+$\blacksquare$
