--- a/main.tex
+++ b/main.tex
@@ -9,10 +9,11 @@
 \newcommand{\coursename}{Гос 5 с.}
 
 \author{
-    Фисман Максим \\
-    Михаил Фурманов \\
+    Анищенко Иван \\
+    Войтенко Денис \\
     Сиденко Олег \\
-    Денис Войтенко
+    Фисман Максим \\
+    Фурманов Михаил
 }
 
 \newcommand{\coursedate}{Осень 2025}
