--- a/solutions/probability/23.tex
+++ b/solutions/probability/23.tex
@@ -37,11 +37,11 @@
 \]
 т.е. события не являются независимыми в совокупности.
 
-\Def Пусть задано вероятностное пространство $(\Omega, \mathcal{F}, \mathbb{P})$, события $A_1, A_2, \ldots, A_n \in \mathcal{F}$. Совокупность событий $A_1, \ldots, A_n$ называется \textit{полной системой событий}, если выполняются условия:
+\Def Пусть задано вероятностное пространство $(\Omega, \mathcal{F}, \mathbb{P})$, события $A_1, A_2, \ldots, A_n, \ldots \in \mathcal{F}$. Совокупность событий $A_1, \ldots, A_n, \ldots$ (их не более, чем счетно) называется \textit{полной системой событий}, если выполняются условия:
 \begin{enumerate}
     \item $A_i \cap A_j = \varnothing$ \quad при $i \ne j$\; (\textit{попарно несовместны});
-    \item $A_1 \cup A_2 \cup \ldots \cup A_n = \Omega$\; (\textit{в совокупности образуют всё пространство элементарных исходов}).
-    \item $\mathbb{P}(A_i) > 0$ \quad для всех $i = 1, \ldots, n$ (\textit{нетривиальны}).
+    \item $\bigcup_{i=1}^{\infty} A_i = \Omega$\; (\textit{в совокупности образуют всё пространство элементарных исходов}).
+    \item $\mathbb{P}(A_i) > 0$ \quad для всех $i = 1, \ldots, n, \ldots$ (\textit{нетривиальны}).
 \end{enumerate}
 
 
@@ -54,9 +54,9 @@
 
 \Proof
 
-Так как события $\{B_i\}_{j=1}^\infty$ образуют полную систему событий, то по определению событие $A$ можно представить следующим образом:
+Так как $A \subset \bigcup\limits_{i=1}^\infty B_i$,
 \[
-A = A \cap \Omega = A \cap \left(\bigcup_{i=1}^{\infty} B_i\right) = \bigcup_{i=1}^{\infty}(A \cap B_i)
+A = A \cap \left(\bigcup_{i=1}^{\infty} B_i\right) = \bigcup_{i=1}^{\infty}(A \cap B_i)
 \]
 
 События $\{B_i\}_{i=1}^{\infty}$ попарно несовместимы, значит, события $(A \cap B_i)$ тоже несовместимы. Тогда, воспользовавшись определением условной вероятности, получаем:
@@ -67,9 +67,9 @@ A = A \cap \Omega = A \cap \left(\bigcup_{i=1}^{\infty} B_i\right) = \bigcup_{i=
 \Endproof
 
 
-\textbf{Формулы Байеса.} Пусть даны события $A, H_1, \ldots, H_n, \ldots;$ $\mathbb{P}(A) > 0$, $\mathbb{P}(H_i) > 0$, причём $H_i \cap H_j = \varnothing~(i \ne j)$ и $\bigcup\limits_{i=1}^\infty H_i \supset A$ (например, $\bigcup\limits_{i=1}^\infty H_i = \Omega$).
+\textbf{Формула Байеса.} Пусть даны события $A, H_1, \ldots, H_n, \ldots;$ $\mathbb{P}(A) > 0$, $\mathbb{P}(H_i) > 0$, причём $H_i \cap H_j = \varnothing~(i \ne j)$ и $\bigcup\limits_{i=1}^\infty H_i \supset A$ (например, $\bigcup\limits_{i=1}^\infty H_i = \Omega$).
 
-\textit{Тогда справедливы формулы Байеса:}
+\textit{Тогда справедлива формула Байеса:}
 \[
 \mathbb{P}(H_i \mid A) = \frac{\mathbb{P}(H_i)\, \mathbb{P}(A \mid H_i)}
 {\sum\limits_{j=1}^\infty \mathbb{P}(H_j)\, \mathbb{P}(A \mid H_j)}, \qquad i = 1, ... \ n.
