--- a/style.tex
+++ b/style.tex
@@ -94,6 +94,7 @@
 \newcommand{\y}{\overline{y}}
 \newcommand{\soch}[2]{\text{$C_{#1}^{#2}$}}
 \newcommand{\X}{\text{$\mathcal{X}$}}
+\newcommand{\Lc}{\mathcal{L}}
 \newcommand{\VC}[2]{\text{$VC\left(#1; #2\right)$}}
 \renewcommand{\P}{\text{$\mathcal{P}$}}
 \newcommand{\B}{\text{$\mathcal{B}$}}
@@ -102,6 +103,9 @@
 \newcommand{\norm}[1]{\left\|{#1}\right\|} % автоматический размер нормы
 \newcommand{\set}[1]{\left\{{#1}\right\}} % автоматический размер множества
 \newcommand{\condset}[2]{\set{#1 \ | \ #2}} % определение множества
+\newcommand{\Ima}{\operatorname{Im}}
+\newcommand{\Ker}{\operatorname{Ker}}
+\newcommand{\Rg}{\operatorname{rg}}
 
 \newcommand{\distrfamily}{\condset{P_\theta}{\theta \in \Theta}}
 
