--- a/solutions/analysis/11.tex
+++ b/solutions/analysis/11.tex
@@ -1,1 +1,142 @@
 \subsection{Равномерная сходимость функциональных последовательностей и рядов. Непрерывность, интегрируемость и дифференцируемость суммы функционального ряда.}
+
+\subsubsection{Функциональные последовательности}
+
+\Def Пусть $X \neq \varnothing$ -- абстрактное множество. Тогда последовательность функций $\{f_n\}_{n=1}^{\infty}$, где $f_n: X \rightarrow \R \;\forall n \in \N$, называется функциональной последовательностью.
+
+\Def Функциональная последовательность сходится \textbf{поточечно} к функции $f: X \rightarrow \R$, если $\forall x \in X \; \lim\limits_{n \to \infty} f_n(x) = f(x)$. Иначе говоря,
+
+\begin{equation*}
+    \forall x \in X \;\forall \eps > 0 \;\exists N \in \N \;\forall n \geq N \;|f_n(x) - f(x)| < \eps.
+\end{equation*}
+
+\Def Функциональная последовательность сходится \textbf{равномерно} к функции $f: X \rightarrow \R$, если 
+
+\begin{equation*}
+    \forall \eps > 0 \;\exists N \in \N \;\forall n \geq N  \;\forall x \in X \; |f_n(x) - f(x)| < \eps.
+\end{equation*}
+
+\Lemma $f_n \overset{X}{\rightrightarrows} f \;\iff\; \sup_{x \in X} |f_n(x) - f(x)| \to 0, n \to \infty$.
+
+\Theor{Критерий равномерной сходимости функциональной последовательности}
+
+$f_n \overset{X}{\rightrightarrows} f, n \to \infty \;\iff\; \exists \{a_n\} \subset [0, +\infty): 
+\begin{cases*}
+    a_n \to 0, n \to \infty; \\
+    |f_n(x) - f(x)| \leq a_n \;\forall n \in \N \;\forall x \in X.        
+\end{cases*}$
+
+\Proof
+
+В одну сторону, берем супремум по $x \in X$ из второго неравенства и используем лемму.
+
+В другую сторону, берем супремум в качестве искомой последовательности.
+
+\Endproof
+
+\Theor{Критерий отсутствия сходимости функциональной последовательности}
+
+$f_n \overset{X}{\cancel{\rightrightarrows}} f, n \to \infty \;\iff\; \exists {x_n} \subset X: \,|f_n(x_n) - f(x_n)| \nrightarrow 0, n \;\to\; \infty$.
+
+\Proof
+
+В одну сторону, $\forall n \in \N \;\sup_{x \in X} |f(x) - f_n(x)| \geq |f(x_n) - f_n(x_n)| \nrightarrow 0, n \to \infty$.
+
+В другую сторону, имеем, что $\exists \eps > 0 \;\forall k \in \N \;\exists n_k \geq k \;\exists x_{n_k} \in X : |f(x_n) - f_n(x_n)| \geq \eps$.
+Таким образом, построены последовательности $\{n_k\}_{k=1}^{\infty}$ и $\{x_{n_k}\}_{k=1}^{\infty}$, такие что $|f(x_{n_k})| - f_{n_k}(x_{n_k})| \geq \eps \;\forall k \in \N$.
+Для остальных $n$ (если $n \notin \{n_k | k \in \N\}$), положим $x_n = x^*$ -- произвольная точка из $X$.
+
+Таким образом построена последовательность $\{x_n\}_{n=1}^{\infty}$, такая что $|f(x_n) - f_n(x_n)| \nrightarrow 0, n \to \infty$, так как содержит не стремящуюся к 0 подпоследовательность $\{x_{n_k}\}$.
+
+\Endproof
+
+\Theor{Критерий Коши равномерной сходимости функциональной последовательности}
+
+$f_n \overset{X}{\rightrightarrows} f, n \to \infty \;\iff\; \forall \eps > 0 \;\exists N_{\eps}: \;\forall m, n \geq N_{\eps} \;\forall x \in X \; |f_n(x) - f_m(x)| < \eps$.
+
+\Proof
+
+Пусть $f_n \overset{X}{\rightrightarrows} f$. По определению, $\forall \eps > 0 \;\exists N_{\eps} \in \N \;\forall n \geq N_{\eps} \;\forall x \in X \; |f(x) - f_n(x)| < \frac{\eps}{2}$.
+
+Отсюда $\forall \eps > 0 \;\exists N_{\eps} \in \N: \forall n, m \geq N_{\eps} \;\forall x \in X \; |f_n(x) - f_n(x)| < \eps$. 
+
+Обратно, пусть выполнено условие Коши. Тогда в частности для $\forall x \in X$ числовая последовательность $\{f_n(x)\}_{n=1}^{\infty}$ удовлетворяет условию Коши, а следовательно $\exists \lim\limits_{n \to \infty} f_n(x) \eqqcolon f(x)$.
+
+Покажем, что $\{f_n\}$ сходится равномерно к построенной функции $f(x)$.
+
+В условии Коши зафиксируем $n \geq N_{\eps}$ и в неравенстве $|f_n(x) - f_m(x)| < \eps$ перейдем к пределу при $m \to \infty$: $|f_n(x) - f(x)| \leq \eps \;\forall x \in X$.
+
+Но $n \geq N_{\eps}$ был выбран произвольно, то есть получаем $\forall \eps > 0 \;\exists N_{\eps} \in \N \;\forall n \geq N_{\eps} \forall x \in X |f_n(x) - f(x)| \leq \eps$, что и является определением равномерной сходимости.
+
+\Endproof
+
+\subsubsection{Функциональные ряды}
+
+\Def Пусть $X \neq \varnothing$ -- абстрактное множество. Функциональным рядом будем называть пару функциональных последовательностей $\{f_n\}$ и $\{S_n\}$, где $\{f_n\}$ -- члены функционального ряда, а $S_n \coloneqq \sum_{k=1}^n f_k$ -- частичные суммы функционального ряда.
+
+\Def Функциональный ряд $\sum_{k=1}^{\infty} f_k$ сходится \textbf{поточечно} на $X$, если $\exists S: X \rightarrow \R: S_n \overset{X}{\to} S, n \to \infty$.
+
+\Def Функциональный ряд $\sum_{k=1}^{\infty} f_k$ сходится \textbf{равномерно} на $X$, если $\exists S: X \rightarrow \R: S_n \overset{X}{\rightrightarrows} S, n \to \infty$.
+
+\Theor{Критерий Коши равномерной сходимости функционального ряда}
+
+$\sum_{n=1}^{\infty} f_k \text{ сх. равн. на $X$} \;\iff\; \forall \eps > 0 \;\exists N_{\eps} \;\forall n \geq N_{\eps} \;\forall p \in \N \;\forall x \in X \; |\sum_{k=n}^{n+p} f_k(x)| < \eps$.
+
+\Proof Просто применяем критерий Коши для ф. последовательностей к $S_n$. \Endproof
+
+\Consequence Если $\sum_{n=1}^{\infty} f_k$ сх. равн. на $X$, то $f_n \overset{X}{\rightrightarrows} 0$.
+
+\Theor{Обобщенный признак равномерной сходимости функционального ряда}
+
+Пусть $\sum_{k=1}^{\infty} V_k$ сходится равномерно на $X$, причем $V_k \geq 0 \;\forall x \in X \;\forall k \in \N$.
+
+Пусть $0 \leq |U_k(x)| \leq V_k(x) \;\forall x \in X \;\forall k \in \N$.
+
+Тогда ряд $\sum_{k=1}^{\infty} V_k$ сходится равномерно на $X$. 
+
+\Proof
+
+$\forall \eps > 0 \;\exists N_{\eps} \in \N \;\forall n \geq N_{\eps} \;\forall p \in \N \;\forall x \in X \hookrightarrow \left|\sum_{k=n}^{n+p} u_k(x)\right| \leq \sum_{k=n}^{n+p} |u_k(x)| \leq \sum_{k=n}^{n+p} V_k(x) \leq \eps$.
+
+\Endproof
+
+\Consequence (Признак Вейерштрасса равномерной сходимости функционального ряда)
+
+Пусть $\sum_{n=1}^{\infty} a_n$ -- сходящийся числовой ряд, причем $a_n \geq 0 \;\forall n \in \N$.
+
+Пусть $\sum_{k=1}^{\infty} f_k$ -- функциональный ряд, такой что $|f_k(x)| \leq a_n \;\forall n \in \N \;\forall x \in X$.
+
+Тогда $\sum_{k=1}^{\infty} f_k$ сходится равномерно.
+
+\Theor{Признак Дирихле равномерной сходимости функционального ряда}
+
+Пусть $\{u_k\}, \{v_k\}$ -- функциональные последовательности на $X$, удовлетворяющие следующим условиям:
+
+\begin{enumerate}
+    \item Последовательность $\left\{\sum_{k=1}^n u_k \right\}$ равномерно ограничена на $X$ (т.е. $\exists C > 0: \left|\sum_{k=1}^n u_k(x)\right| < C \;\forall n \in \N \;\forall x \in X$);
+    \item $V_k \overset{X}{\rightrightarrows} 0, k \to \infty$;
+    \item $V_{k+1}(x) \leq V_k(x) \;\forall k \in \N \;\forall x \in X$.
+\end{enumerate}
+
+Тогда ряд $\sum_{k=1}^{\infty} u_k v_k$ сходится равномерно на $X$.
+
+\Proof
+
+Пусть $S_n \coloneqq \sum_{k=1}^n u_k$; $S_0 \equiv 0$.
+
+Выполним преобразование Абеля в каждой точке $x$:
+
+\begin{gather*}
+    \sum_{k=1}^{\infty} u_k(x) v_k(x) = \sum_{k=1}^n \left[S_k(x) - S_{k-1}(x)\right] V_k(x) = \sum_{k=1}^n S_k(x) V_k(x) - \sum_{k=1}^n S_{k-1}(x) V_k(x) = \\
+    = \sum_{k=1}^n S_k(x) V_k(x) - \sum_{k=0}^{n-1} S_k(x) V_{k+1}(x) = S_n(x)V_n(x) + \sum_{k=1}^{n-1} S_k(x) \left[V_k(x) - V_{k+1}(x)\right]
+\end{gather*}
+
+$S_n V_n$ равномерно стремится к 0 как произведение равномерно ограниченной на равномерно стремящуюся к 0.
+
+В каждом слагаемом под суммой, $V_k(x) - V_{k+1}(x) \geq 0 \;\forall k \in \N \;\forall x \in X$, а $\sum_{k=1}^{n-1} (V_k(x) - V_{k+1}(x)) = V_1(x) - V_n(x)$ -- равномерно сходится, так как $V_n(x)$ равномерно сходится к 0. Так как $S_k$ равномерно ограничены, то $|S_k(x) (V_k(x) - V_{k+1}(x))| \leq C((V_k(x) - V_{k+1}(x)))$ -- оценка неотрицательной функцией, ряд из которых сходится равномерно. По обобщенному признаку получаем, что сумма ряд сходится равномерно.
+
+\Endproof
+
+\subsubsection{Непрерывность, интегрируемость и дифференцируемость суммы функционального ряда}
+
+Лекции потерялись. Главное -- не расстраиваться.
