--- a/style.tex
+++ b/style.tex
@@ -25,6 +25,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{enumerate}
+\usepackage{cancel}
 \usepackage[normalem]{ulem}
 \setlength\parindent{0pt}
 
