more probability mistakes fixed

--- a/solutions/probability/24.tex
+++ b/solutions/probability/24.tex
@@ -94,11 +94,11 @@ p_{\xi,\eta}(x, y) = p_\xi(x) \cdot p_\eta(y).
 
   \Proof
 
-    $\mathbb{E}(\xi + \eta) = \sum_{w} \left( \xi(w) + \eta(w) \right) \cdot p(w)
-= \sum_{w} \xi(w) \cdot p(w) + \sum_{w} \eta(w) \cdot p(w)
+    $\mathbb{E}(\xi + \eta) = \sum_{w} \left( \xi(w) + \eta(w) \right) \cdot \mathbb{P}(w)
+= \sum_{w} \xi(w) \cdot \mathbb{P}(w) + \sum_{w} \eta(w) \cdot \mathbb{P}(w)
 = \mathbb{E}(\xi) + \mathbb{E}(\eta)$
 
-  $\mathbb{E}(c \xi) = \sum_{w} c\xi(w) = c \sum_{w} \xi(w) = c \mathbb{E}(\xi)$  
+  $\mathbb{E}(c \xi) = \sum_{w} c\xi(w)\cdot\mathbb{P}(w) = c \sum_{w} \xi(w)\cdot\mathbb{P}(w) = c \mathbb{E}(\xi)$  
 
   \Endproof
 
