--- a/solutions/probability/25.tex
+++ b/solutions/probability/25.tex
@@ -43,6 +43,7 @@
 
 \Endproof
 
+\textbf{Замечание.} \hyperlink{probability_convergence}{Определение сходимости по вероятности}
 
 \textbf{Закон больших чисел (Чебышева)}
 Для любой последовательности $\xi_1, \xi_2, \ldots$ попарно независимых и одинаково распределённых случайных величин с конечным вторым моментом $\mathbb{E}\xi_1^2 < \infty$ имеет место сходимость
