--- a/solutions/statistics/common.tex
+++ b/solutions/statistics/common.tex
@@ -2,7 +2,7 @@
 
 \textbf{Виды сходимости случайных величин}
 
-\Def Последовательность $\xi_n$ сходится к $\xi$ \textit{по вероятности} ($\xi_n \xrightarrow{P} \xi$), если
+\Def \hypertarget{probability_convergence}{Последовательность $\xi_n$ сходится к $\xi$ \textit{по вероятности} ($\xi_n \xrightarrow{P} \xi$)}, если
 \[
 \forall \varepsilon > 0: \quad \lim_{n \to \infty} P(|\xi_n - \xi| > \varepsilon) = 0.
 \]
