fix second ticket

--- a/solutions/analysis/2.tex
+++ b/solutions/analysis/2.tex
@@ -22,31 +22,63 @@
 
 \Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $f$ разрывна в точке $x_0$, если она не непрерывна в точке $x_0$.
 
-\Note Не входит как в таковой билет, но в лекции говорится, что надо знать как <<отче наш>>. Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$.
-\begin{enumerate}
-    \item \textit{Устранимый разрыв.} $\exists \lim\limits_{x \to x_0} f(x) \in \R$, но $\lim\limits_{x \to x_0} f(x) \neq f(x_0)$.
-    \item \textit{Разрыв первого рода.} $\exists \lim\limits_{x \to x_0 - 0} f(x) \in \R, \exists \lim\limits_{x \to x_0 + 0} f(x) \in \R$, но $\lim\limits_{x \to x_0 - 0} f(x) \neq \lim\limits_{x \to x_0 + 0} f(x)$.
-    \item \textit{Разрыв второго рода.} Хотя бы один из односторонних пределов не существует, либо бесконечен.
-\end{enumerate}
+\Def Пусть $X \subset \R, f: X \to \R$. Будем говорить, что $f$ непрерывна на $X$, если она непрерывна в каждой точке $X$.
 
-\Def Пусть $X \subset \R, f: X \to \R$. Будем говорить, что $f$ непрерывна на $X$, если она непрерывна в каждой точке.
+\Lemma
 
-\Def Класс всех непрерывных функций на $X$ будем обозначать $C(X)$.
-
-\Def Компактом $K \subset \R$ будем называть множество, если из каждой числовой последовательности в нём можно выделить сходящуюся подпоследовательность, сходящуюся к элементу этого же множества.
-
-\Theor{Эквивалентные определения компакта} Пусть $K \subset \R$. Тогда следующие условия эквивалентны:
-\begin{enumerate}
-    \item $K$ - компакт
-    \item $K$ - ограниченное и замкнутое множество
-\end{enumerate}
-
-\Th Пусть $K \subset \R$ - компакт, $f \in C(K)$. Тогда $f(K)$ тоже компакт.
+Множество значений \(
+  f([a,b])=\{f(x)\mid x\in[a,b]\}
+\) ограничено
 
 \Proof
 
-Пусть $\{y_n\} \subset f(K) \Rightarrow \exists \{x_n\} \subset K: \forall n \in \N \hookrightarrow f(x_n) = y_n \Rightarrow \exists \{x_{n_j}\} \subset K: \lim\limits_{j \to \infty} x_{n_j} = x^* \in K \Rightarrow \lim\limits_{j \to \infty} f(x_{n_j}) = f(x^*) = y^* \in f(K)$.
+Предположим, что функция не ограничена. Для определенности, сверху (снизу аналогично).
 
-То есть для любой последовательности $\{y_n\}$ в $f(K)$ найдется подпоследовательность $\{y_{n_j}\}$, такая что её предел сходится к $y^* \in f(K)$. Значит $f(K)$ - компакт, по определению.
+Для каждого
+$n\in\mathbb{N}$ существует $a_n\in[a,b]$ такое, что
+\(
+  f(a_n) > n.
+\)
+
+По теореме Больцано-Вейерштрасса последовательность $a_n$ имеет конечный частичный предел $x_0 \in [a,b]$
+
+Так как $f$ непрерывна в точке $x_0$, то из $a_{n_k}\to x_0$ следует
+\(
+  f(a_{n_k})\to f(x_0)
+\)
+при $k\to\infty$.
+Но по построению $f(a_{n_k})>n_k\ge k$, то есть $f(a_{n_k})\to+\infty$,
+что противоречит существованию конечного предела $f(x_0)$.
+Следовательно, наше предположение неверно, и множество $f([a,b])$
+ограничено сверху.
+
+\Endproof
+
+\Theor{Вейерштрасса}
+
+Пусть $f\colon [a,b]\to\mathbb{R}$ непрерывна на отрезке $[a,b]$.
+Тогда существуют точки $x_m,x_M\in[a,b]$ такие, что
+\[
+  f(x_M)=\sup_{x\in[a,b]} f(x),\qquad
+  f(x_m)=\inf_{x\in[a,b]} f(x).
+\]
+
+\Proof
+
+Покажем для супремума, для инфимума аналогично
+
+Так как $f([a,b])$ ограничено сверху, существует
+его точная верхняя грань
+\[
+  M = \sup_{x\in[a,b]} f(x)\in\mathbb{R}.
+\]
+
+По определению супремума для каждого $n\in\mathbb{N}$ найдётся такая
+точка $x_n\in[a,b]$, что
+\(
+  M - \frac1n < f(x_n) \le M.
+\).
+То есть получили $f(x_n) \to M$. Выберем из них сходящуюся подпоследовательность по теореме Больцано-Вейерштрасса $x_{n_k} \to x_M$. По непрерывности функции $f(x_{n_k}) \to f(x_M)$.
+Но по построению $f(x_{n_k}) \to M$. В силу единственности предела $f(x_M) = M$. Что и требовалось.
 
 \Endproof
