--- a/solutions/analysis/4.tex
+++ b/solutions/analysis/4.tex
@@ -72,7 +72,7 @@ $f$ дифференцируема в $x_0$, тогда $0 \leq f'_-(x_0) = f'(x
 Положим $h(x) = f(x) - \frac{f(b) - f(a)}{g(b) - g(a)} g(x)$. Заметим следующее:
 
 \begin{multline*}
-    h(a) = f(a) - \frac{f(b) - f(a)}{g(b) - g(a)} g(a) = \frac{f(a) g(b) - f(a) g(a) - g(a) f(b) + g(a) f(a)}{g(b) - g(a)} = \frac{g(a)f(a) - g(a) f(b)}{g(b) - g(a)} = \\
+    h(a) = f(a) - \frac{f(b) - f(a)}{g(b) - g(a)} g(a) = \frac{f(a) g(b) - f(a) g(a) - g(a) f(b) + g(a) f(a)}{g(b) - g(a)} = \frac{g(b)f(a) - g(a) f(b)}{g(b) - g(a)} = \\
     = \frac{f(a) g(b) - f(b) g(b) - g(a) f(b) + g(b) f(b)}{g(b) - g(a)} =
     \frac{(f(a) g(b) - f(b) g(b)) - (g(a) f(b) - g(b) f(b))}{g(b) - g(a)} = \\
     =\frac{(f(a) - f(b)) g(b) - (g(a) - g(b)) f(b)}{g(b) - g(a)} = f(b) - \frac{f(b) - f(a)}{g(b) - g(a)} g(b) = h(b)
